; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-ext/module/extr_module.c_jerryx_module_add_to_cache.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-ext/module/extr_module.c_jerryx_module_add_to_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @jerryx_module_add_to_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jerryx_module_add_to_cache(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @jerry_set_property(i32 %8, i32 %9, i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i64 @jerry_value_is_error(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @jerry_release_value(i32 %16)
  br label %22

18:                                               ; preds = %3
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @jerry_release_value(i32 %19)
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %7, align 4
  br label %22

22:                                               ; preds = %18, %15
  %23 = load i32, i32* %7, align 4
  ret i32 %23
}

declare dso_local i32 @jerry_set_property(i32, i32, i32) #1

declare dso_local i64 @jerry_value_is_error(i32) #1

declare dso_local i32 @jerry_release_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
